--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ Django==1.6.3
 Fabric==1.8.3
 South==0.8.4
 dj-database-url==0.3.0
+ecdsa==0.11
 gunicorn==18.0
-paramiko==1.13.0
+paramiko==1.12.3
 psycopg2==2.5.2
 pycrypto==2.6.1
 wsgiref==0.1.2
